--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </div>
     
     <div class="table-of-contents-left">
-        <h2>Table of Contents</h2>
+        <h2>Talaan ng Nilalaman</h2>
         <ul>
             <li>Prelim</li>
             <li>Midterm</li>
